--- a/variations/NotAnotherAnimeThemeSCSL.theme.css
+++ b/variations/NotAnotherAnimeThemeSCSL.theme.css
@@ -9,7 +9,7 @@
 
 /*EDIT THIS TO CHANGE THE BACKGROUND, I RECOMMEND USING IMGUR TO HOST YOUR IMAGE*/
 [class~=app] {
-    background: url(https://raw.githubusercontent.com/WhatDaPuck/NotAnotherAnimeTheme/master/image/PTT4OKi.jpg) !important;
+    background: url(https://i.imgur.com/1sknQlQ.png) !important;
     background-size: cover !important;
 }
 
@@ -24,16 +24,4 @@
 /*EDIT THIS TO CHANGE THE FRIENDS ICON IMAGE, I WOULD RECOMMEND USING IMGUR TO HOST YOUR IMAGE*/
 [class~=guilds-wrapper] [class~=guilds] [class~=friends-icon] {
     background-image: url(https://s-media-cache-ak0.pinimg.com/originals/26/64/b5/2664b58e5882ff735aef9019d7f2bd3e.jpg)
-}
-
-
-/*IF YOU DON'T WANT A CUSTOM FRIENDS ICON JUST REMOVE THIS BIT OF CODE*/
-[class~=guilds-wrapper] [class~=guilds] [class~=friends-icon] {
-    display: block;
-    width: 50px;
-    height: 50px;
-    content: '';
-    background-size: 230%;    /*how zoomed in or zoomed out your image is*/
-    background-repeat: no-repeat;
-    background-position: top left;    /*the positioning of your image in the icon, for example "top left" uses the top left of the image*/
 }
